# solidity-fuzzing

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  COVERAGE.md  README.md  categorize_ice.py  plan_improve_coverage.md  rerender_afl_hangs.py  run_afl_crashes.py  run_afl_hangs.py  run_ice_crashes.py  run_s_crash.py  run_s_crash.sh  run_sol_crashes.py  run_yul_crashes.py
.github/workflows/: build-afl.yml  build-fuzz.yml  build.yml  docker.yml  publish-images.yml
cmake/: fmtlib.cmake  nlohmann-json.cmake  range-v3.cmake  submodules.cmake
cmake/toolchains/: libfuzzer-native.cmake  libfuzzer.cmake
patches/: 0001-test-EVMHost-fix-accounts-UAF.patch  0002-test-EVMHost-fix-selfdestruct-transfer-arg-order.patch  0003-libsolidity-YulArity-operator-less-for-libc++.patch  0003-libsolidity-YulArity-operator-less.patch
scripts/: build_ossfuzz.sh  run_ossfuzz_afl.sh  update_solidity.sh
scripts/docker/: Dockerfile.ubuntu.clang.afl  Dockerfile.ubuntu.clang.ossfuzz
tools/: CMakeLists.txt  README.md
tools/afl/: CMakeLists.txt  README.md  build_afl.sh  build_corpus.sh  build_corpus_tsgen.sh  build_grammar.sh  build_instrumented.sh  categorize_afl_hangs.py  const_opt_runner.cpp  fetch_realworld.sh  run_afl.sh  run_afl_parallel.sh  sol_afl_diff_runner.cpp  solfuzzer.cpp
tools/afl/tests/: run.sh
tools/afl/tests/inputs/: skip_assembly_keyword.sol  skip_extcodecopy_self.sol  skip_extcodesize_self.sol  skip_gas_call.sol
tools/common/: EVMHost.cpp  EVMHost.h  fuzzer_common.cpp  fuzzer_common.h
tools/ossfuzz/: AbiV2IsabelleFuzzer.cpp  CMakeLists.txt  FuzzerDiffCommon.cpp  FuzzerDiffCommon.h  README.md  SolidityCustomMutatorInterface.cpp  SolidityCustomMutatorInterface.h  SolidityEvmoneInterface.cpp  SolidityEvmoneInterface.h  SolidityGenerator.cpp  SolidityGenerator.h  TODO_more_fuzzers.md  YulEvmoneInterface.cpp  YulEvmoneInterface.h  abiV2Proto.pb.cc  abiV2Proto.pb.h  abiV2ProtoFuzzer.cpp  build_ossfuzz.sh  check_sol_proto_files.py  const_opt_ossfuzz.cpp  lpm_afl_mutator.cc  protoToAbiV2.cpp  protoToAbiV2.h  protoToShuffler.cpp  protoToShuffler.h  protoToSol.cpp  protoToSol.h  protoToSol2.cpp  protoToSol2.h  protoToSolRecStructAlias.cpp  protoToSolRecStructAlias.h  protoToSolRoundtrip.cpp  protoToSolRoundtrip.h  protoToYul.cpp  protoToYul.h  run_ossfuzz_afl.sh  shufflerProto.pb.cc  shufflerProto.pb.h  shufflerProto.proto  shufflerProtoFuzzer.cpp  (+22 more)
tools/property/: CMakeLists.txt  TarjanSCCProperty.cpp  tlsfFreeListProperty.cpp
tools/runners/: CMakeLists.txt  check_diversity_and_errors.sh  evmone_tracer_facade.hpp  sol_crash_backtrace.py  sol_debug_runner.cpp  sol_ice_crash_backtrace_categorizer.py  test_debug_runners.sh  yul_debug_runner.cpp
tools/runners/test_cases/sol/: create2_multiple_contracts_match.sol  create2_storage_match.sol  internal_fn_ptr_array_match.sol  simple_match.sol  storage_write_match.sol
tools/runners/test_cases/yul/: create_subcontract_match.yul  loop_storage_match.yul  simple_match.yul
tools/shuffler-fuzzer/: CMakeLists.txt  README.md  StackShufflerTestCommon.h  stackshuffler.cpp
