add_custom_target(ossfuzz)
add_dependencies(ossfuzz
        solc_ossfuzz
        solc_mutator_ossfuzz
        const_opt_ossfuzz
        strictasm_opt_ossfuzz
        strictasm_assembly_ossfuzz
)

if (OSSFUZZ)
    add_custom_target(ossfuzz_proto)
    add_dependencies(ossfuzz_proto
            sol_proto_ossfuzz_nondiff
            sol_proto_ossfuzz_evmone
            sol_proto_ossfuzz_evmone_viair
            sol_ice_ossfuzz
            yul_proto_ossfuzz_evmone
            yul_proto_ossfuzz_evmone_ssacfg
            yul_proto_ossfuzz_evmone_check_stack_alloc
            yul_proto_ossfuzz_evmone_single_pass
            shuffler_proto_ossfuzz
    )

    add_custom_target(ossfuzz_abiv2)
    add_dependencies(ossfuzz_abiv2 abiv2_proto_ossfuzz abiv2_isabelle_ossfuzz)
endif()

if (OSSFUZZ)
    add_executable(solc_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            ${TESTCASEREADER_CPP}
    )
    target_link_libraries(solc_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(solc_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(solc_mutator_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            ${TESTCASEREADER_CPP}
            SolidityGenerator.cpp
            SolidityCustomMutatorInterface.cpp
    )
    target_link_libraries(solc_mutator_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(solc_mutator_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(const_opt_ossfuzz const_opt_ossfuzz.cpp ../common/fuzzer_common.cpp)
    target_link_libraries(const_opt_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(const_opt_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(strictasm_opt_ossfuzz strictasm_opt_ossfuzz.cpp)
    target_link_libraries(strictasm_opt_ossfuzz PRIVATE yul)
    set_target_properties(strictasm_opt_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(strictasm_assembly_ossfuzz strictasm_assembly_ossfuzz.cpp)
    target_link_libraries(strictasm_assembly_ossfuzz PRIVATE yul)
    set_target_properties(strictasm_assembly_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    # The -Wno-* compile options are required for source files that
    # are auto-generated by the protobuf compiler because the compiler
    # does not generate warning-free C++ bindings with regard to
    # upstream Clang builds that are used by ossfuzz.
    set(
        SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS
        -Wno-sign-conversion
        -Wno-suggest-destructor-override
        -Wno-inconsistent-missing-destructor-override
        -Wno-shorten-64-to-32
        -Wno-deprecated
    )

    add_executable(yul_proto_ossfuzz_evmone
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone PRIVATE /usr/include/libprotobuf-mutator)
    target_link_libraries(yul_proto_ossfuzz_evmone PRIVATE yul
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(yul_proto_ossfuzz_evmone PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(yul_proto_ossfuzz_evmone_ssacfg
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_ssacfg PRIVATE /usr/include/libprotobuf-mutator)
    target_compile_definitions(yul_proto_ossfuzz_evmone_ssacfg PRIVATE FUZZER_MODE_SSACFG)
    target_link_libraries(yul_proto_ossfuzz_evmone_ssacfg PRIVATE yul
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(yul_proto_ossfuzz_evmone_ssacfg PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_ssacfg PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(yul_proto_ossfuzz_evmone_check_stack_alloc
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE /usr/include/libprotobuf-mutator)
    target_compile_definitions(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE FUZZER_MODE_CHECK_STACK_ALLOC)
    target_link_libraries(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE yul
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(yul_proto_ossfuzz_evmone_check_stack_alloc PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_check_stack_alloc PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(yul_proto_ossfuzz_evmone_single_pass
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_single_pass PRIVATE /usr/include/libprotobuf-mutator)
    target_compile_definitions(yul_proto_ossfuzz_evmone_single_pass PRIVATE FUZZER_MODE_SINGLE_PASS)
    target_link_libraries(yul_proto_ossfuzz_evmone_single_pass PRIVATE yul
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(yul_proto_ossfuzz_evmone_single_pass PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_single_pass PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(shuffler_proto_ossfuzz
            shufflerProtoFuzzer.cpp
            protoToShuffler.cpp
            shufflerProto.pb.cc
    )
    target_include_directories(shuffler_proto_ossfuzz PRIVATE /usr/include/libprotobuf-mutator)
    target_link_libraries(shuffler_proto_ossfuzz PRIVATE yul
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(shuffler_proto_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(shuffler_proto_ossfuzz PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(abiv2_proto_ossfuzz
            ${EVMHOST_CPP}
            abiV2ProtoFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToAbiV2.cpp
            abiV2Proto.pb.cc
    )
    target_include_directories(abiv2_proto_ossfuzz PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_link_libraries(abiv2_proto_ossfuzz PRIVATE solidity
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(abiv2_proto_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(abiv2_proto_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(abiv2_isabelle_ossfuzz
            AbiV2IsabelleFuzzer.cpp
            SolidityEvmoneInterface.cpp
            ${EVMHOST_CPP}
            protoToAbiV2.cpp
            abiV2Proto.pb.cc
    )
    target_include_directories(abiv2_isabelle_ossfuzz PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_link_libraries(abiv2_isabelle_ossfuzz PRIVATE solidity
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
            abicoder
            gmp.a
    )
    set_target_properties(abiv2_isabelle_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(abiv2_isabelle_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_nondiff
            solProtoFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToSol.cpp
            solProto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_nondiff PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_link_libraries(sol_proto_ossfuzz_nondiff PRIVATE solidity libsolc
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(sol_proto_ossfuzz_nondiff PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_nondiff PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_evmone
            solProtoFuzzer2.cpp
            FuzzerDiffCommon.cpp
            SolidityEvmoneInterface.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_evmone PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_link_libraries(sol_proto_ossfuzz_evmone PRIVATE solidity libsolc
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(sol_proto_ossfuzz_evmone PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_evmone PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_evmone_viair
            solProtoFuzzer2.cpp
            FuzzerDiffCommon.cpp
            SolidityEvmoneInterface.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_evmone_viair PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_compile_definitions(sol_proto_ossfuzz_evmone_viair PRIVATE FUZZER_MODE_VIAIR)
    target_link_libraries(sol_proto_ossfuzz_evmone_viair PRIVATE solidity libsolc
            evmc
            evmone-standalone
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(sol_proto_ossfuzz_evmone_viair PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_evmone_viair PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    # Frontend-ICE hunter: compile-only, no evmone, no differential. Looks for
    # InternalCompilerError and boost assertion failures on any sol2Proto output.
    add_executable(sol_ice_ossfuzz
            sol_ice_ossfuzz.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
    )
    target_include_directories(sol_ice_ossfuzz PRIVATE
            /usr/include/libprotobuf-mutator
    )
    target_link_libraries(sol_ice_ossfuzz PRIVATE solidity libsolc
            protobuf-mutator-libfuzzer.a
            protobuf-mutator.a
            protobuf.a
    )
    set_target_properties(sol_ice_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_ice_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})
else()
    add_library(solc_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            )
    target_link_libraries(solc_ossfuzz PRIVATE libsolc evmasm)

    add_library(solc_mutator_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            )
    target_link_libraries(solc_mutator_ossfuzz PRIVATE libsolc evmasm)

    add_library(const_opt_ossfuzz
            const_opt_ossfuzz.cpp
            ../common/fuzzer_common.cpp)
    target_link_libraries(const_opt_ossfuzz PRIVATE libsolc evmasm)

    add_library(strictasm_opt_ossfuzz
            strictasm_opt_ossfuzz.cpp
            )
    target_link_libraries(strictasm_opt_ossfuzz PRIVATE yul)

    add_library(strictasm_assembly_ossfuzz
            strictasm_assembly_ossfuzz.cpp
            )
    target_link_libraries(strictasm_assembly_ossfuzz PRIVATE yul)

#    add_executable(abiv2_proto_ossfuzz
#            ${EVMHOST_CPP}
#            abiV2ProtoFuzzer.cpp
#            abiV2FuzzerCommon.cpp
#            protoToAbiV2.cpp
#            abiV2Proto.pb.cc
#    )
#    target_include_directories(abiv2_proto_ossfuzz PRIVATE
#            /src/LPM/external.protobuf/include
#            /src/libprotobuf-mutator
#            /src/evmone/include
#    )
#    target_link_libraries(abiv2_proto_ossfuzz PRIVATE solidity
#            evmone intx ethash keccak evmc-instructions evmc
#            protobuf-mutator-libfuzzer.a
#            protobuf-mutator.a
#            protobuf.a
#            FuzzingEngine.a
#    )
endif()
